@@ -107,7 +107,7 @@ chinstdir     =
 uninstall     = Mozilla Thunderbird (#MAJORMINOR_VERSION#)
 uninstparam   = -ms
 
-[UTorrent]
+[uTorrent]
 
 category      = Internet
 describe      = Bittorrent Client
